--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -40,6 +40,16 @@
             android:layout_weight="1"
             android:text="TextView" />
 
+        <TextView
+            android:id="@+id/genre_text"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
     </LinearLayout>
 
     </androidx.cardview.widget.CardView>
